--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,9 +1,10 @@
 <h1>Search</h1>
 
 <p>
-  <input type="text" #newquery [value]="query" (keydown.enter)="submit(newquery.value)">
+  <input type="text" #newquery [value]="query" (keydown.enter)="submit(newquery.value, type.value)">
+  <input type="hidden" #type [value]="'track'">
 
-  <button (click)="submit(newquery.value)">Search!</button>
+  <button (click)="submit(newquery.value, type.value)">Search!</button>
 </p>
 
 <div *ngIf="results">
